--- a/mainProject/pom.xml
+++ b/mainProject/pom.xml
@@ -37,7 +37,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -59,7 +59,12 @@
 			<artifactId>jjwt-api</artifactId>
 			<version>0.11.2</version>
 		</dependency>
-		
+		<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    
+</dependency>
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
@@ -93,6 +98,34 @@
 			<systemPath>
 			${basedir}/lib/Ab.jar
 			</systemPath>
+		</dependency>
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-websocket</artifactId>
+
+		</dependency>
+
+
+		<dependency>
+
+			<groupId>org.webjars</groupId>
+
+			<artifactId>sockjs-client</artifactId>
+
+			<version>1.0.2</version>
+
+		</dependency>
+
+		<dependency>
+
+			<groupId>org.webjars</groupId>
+
+			<artifactId>stomp-websocket</artifactId>
+
+			<version>2.3.3</version>
+
 		</dependency>
 	</dependencies>
 
