--- a/mentbotapp/package.json
+++ b/mentbotapp/package.json
@@ -55,6 +55,8 @@
     "rxjs": "^6.6.6",
     "simple-line-icons": "^2.5.5",
     "socket.io-client": "^4.4.1",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
