--- a/mentbotapp/package.json
+++ b/mentbotapp/package.json
@@ -49,6 +49,7 @@
     "core-js": "^3.9.1",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
+    "net": "^1.0.2",
     "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
