--- a/mentbotapp/package.json
+++ b/mentbotapp/package.json
@@ -43,6 +43,7 @@
     "@coreui/angular": "^2.11.2",
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
+    "@coreui/coreui-pro": "^4.2.0-beta.1",
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
